[package]
name = "fast-pinball-utilities"
version = "0.1.0"
description = "A tool to flash your FAST pinball node boards"
authors = ["Erick Spaan <erick.t.spaan@gmail.com>"]
edition = "2024"
license = "MIT"

[dependencies]
serialport = "4.8.1"
once_cell = "1"
indicatif = "0.18.0"
reqwest = { version = "0.12.24", features = ["blocking"] }
zip = "6.0.0"
directories = "6.0.0"
